fix (style): set drag-sidebar z-index to 999
modal `globalZIndex` starts at 1000 (https://github.com/Kong/insomnia/blob/d53ef39c9b76aefcfa71630078d838bb95eaad56/packages/insomnia-app/app/ui/components/base/modal.tsx#L11)
and anything with z-index >= 1000 will not be under overlay the first time a modal is open

fixes #4018

--- a/packages/insomnia-app/app/ui/css/components/wrapper.less
+++ b/packages/insomnia-app/app/ui/css/components/wrapper.less
@@ -93,9 +93,10 @@
     }
   }
 
-  .pane-one, .pane-two {
+  .pane-one,
+  .pane-two {
     min-width: 0;
-    max-height:100%;
+    max-height: 100%;
     background: inherit;
     border-left: 1px solid var(--hl-md);
     background: var(--color-bg);
@@ -139,7 +140,7 @@
 
 .drag--sidebar {
   grid-column-start: 3;
-  z-index: 1000;
+  z-index: 999;
   grid-column-end: span 1;
 }
 
